--- a/src/job.css
+++ b/src/job.css
@@ -23,9 +23,9 @@
 
 .DIuaA{
     background-color: #03a9f4 !important;
-    box-shadow: 0 0 1px 3px blue !important;
+    box-shadow: 0 0 1px 3px #1076a3 !important;
 }
 
 .kyJvRZ{
-    background-color: #03a9f4;
+    background-color: #03a9f4 !important;
 }
